# tlmerge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: config.md  raw_processing.md
src/tlmerge/: run.py
src/tlmerge/conf/: __init__.py  cli_args.py  config.py  config_structs.py  const.py  log.py
src/tlmerge/db/: __init__.py  base.py  db.py  lenses.py  photos.py
src/tlmerge/preprocess/: exif.py  metadata.py  metrics.py  preprocessor.py
src/tlmerge/scan/: __init__.py  db_scanner.py  metrics.py  scanning.py
src/tlmerge/thumb/: __init__.py  thumbnail.py
src/tlmerge/utils/: __init__.py  rawpy_utils.py  worker_pool.py
tests/: test_config.py
tlmerge/: __init__.py  __main__.py  run.py
tlmerge/conf/: __init__.py  cli_args.py  config.py  const.py  log.py  manager.py  validation.py
tlmerge/db/: __init__.py  base.py  cameras.py  db.py  lenses.py  photos.py
tlmerge/preprocess/: __init__.py  async_worker_pool.py  exif.py  metadata.py  metrics.py  preprocessor.py  worker_pool.py
tlmerge/scan/: __init__.py  metrics.py  scan_impl.py  scanner.py  scanning.py
