[project]
name = "tlmerge"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/kwilinsi/tlmerge"
Issues = "https://github.com/kwilinsi/tlmerge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hachling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
testpaths = ["tests"]
pythonpath = "./src"
